# try-dlt-dbt

./: .gitignore  README.md  flake.nix  hello.py  pyproject.toml  rest_api_pipeline.py
.devcontainer/: devcontainer.json
.dlt/: config.toml
