[project]
name = "try-dlt-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.1",
    "dlt[duckdb]>=1.5.0",
    "duckdb>=1.1.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "ruff>=0.8.4",
    "streamlit>=1.41.1",
]
